--- a/src/components/ComponentContainer/ComponentContainer.scss
+++ b/src/components/ComponentContainer/ComponentContainer.scss
@@ -4,7 +4,6 @@
     width: 80%;
     box-sizing: border-box;
     .sectionTitle{
-        @include sectionTitle;
         color: $darkContrast;    
     }
     @include md{
