--- a/src/components/Knowledge/Knowledge.scss
+++ b/src/components/Knowledge/Knowledge.scss
@@ -2,9 +2,20 @@
 
 .knowledge{
     @include centeredFullPage(white);
+
     .sectionTitle{
         color: $darkContrast;
+        
     }
+  @include md{
+        .sectionTitle{
+            font-size: 27px;
+            
+        }
+        .sectionSubTitle{
+            font-size:23.4px;
+        }
+        }
 
     .raw {
         width: 760px;
@@ -17,7 +28,7 @@
         @include md{
             margin:0;
             width:100%;
-            padding-left:33%;
+            padding-left:25%;
         }
         @include lg{
             padding-left: 10%;
@@ -49,7 +60,6 @@
     .back {
         width: $flipCardSizeMobile;
         height: $flipCardSizeMobile;
-        font-size: 10px;
         border-radius: $bordRad;
         position: relative;
         img{
@@ -94,7 +104,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 5px;
         flex-direction: column;
         transform: rotateY(180deg);
         border: 1px solid white;
@@ -102,19 +111,15 @@
         background-color: $baseColorTran;
         color: black;
         text-align: center;
-       
     
-        .flipCardTitle {
-            padding-top: 3px;
-            font-size: 2em;
+        font-size: 12px;
+        h4 {
+            padding: 10px 0;
             font-weight: bold;
             margin: 0px;
             
         }
-        
-        .flipCardTitle +p{
-            font-size: 1.3em;
-        }
+    
     }
     
     
